<package format="2">
  <name>rviz_detections</name>
  <version>0.0.1</version>
  <description>Marker publisher</description>
  <maintainer email="airakjo@gmail.fi">Joni Airaksinen (Otteri)</maintainer>
  <author email="airakjo@gmail.fi">Joni Airaksinen (Otteri)</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosmsg</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
